fix: Fixed the design of the Notifications Tab on Safari.  (#1625)
* fix: Fixed the design of the Notifications Tab on Safari.

* Added a changelog entry.

--- a/src/styles/postLists.less
+++ b/src/styles/postLists.less
@@ -186,7 +186,7 @@ app-single-post {
   overflow-y: visible;
   position: relative;
   top: 50px;
-  z-index: 100;
+  z-index: 15;
   width: 100%;
   background: @itemBackground;
   align-items: center;
